# diy-lang-haskell

./: .gitignore  LICENSE  README.md  diy-lang-haskell.cabal  save-commands.json  stdlib.diy  stdlibSolution.diy
app/: Main.hs
parts/: language.md  part_1.md  part_2.md  part_3.md  part_4.md  part_5.md  part_6.md  part_7.md  part_8.md
solutions/: EnvironmentSolution.hs  EvaluatorSolution.hs  ParserSolution.hs  Part_1_Parser.hs  Part_2_Evaluator.hs
src/: Environment.hs  Evaluator.hs  Interpreter.hs  Parser.hs  Types.hs
test/: Test.hs  TestHelper.hs  Test_1_Parser.hs  Test_1_Parsing.hs  Test_2_EvaluatingSimpleExpressions.hs  Test_3_EvaluatingComplexExpressions.hs  Test_4_WorkingWithVariables.hs  Test_5_AddingFunctionsToTheMix.hs  Test_6_WorkingWithLists.hs  Test_7_UsingTheLanguage.hs  Test_all.hs  Test_only_1.hs  Test_only_2.hs  Test_only_3.hs  Test_only_4.hs  Test_only_5.hs  Test_only_6.hs  Test_only_7.hs
test/parts/: TestHelper.hs  Test_1_Parser.hs  Test_2_EvaluatingSimpleExpressions.hs  Test_3_EvaluatingComplexExpressions.hs  Test_4_WorkingWithVariables.hs  Test_5_AddingFunctionsToTheMix.hs  Test_6_WorkingWithLists.hs  Test_7_UsingTheLanguage.hs
util/: InterpreterUtil.hs  ParserUtil.hs
