name:                diy-lang-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/joelchelliah/diy-lang-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Joel Chelliah
maintainer:          joelchelliah@gmail.com
copyright:           2017 Joel Chelliah
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , util
  exposed-modules:     Parser
                     , Evaluator
                     , ParserUtil
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable diy-lang-haskell-exe
  hs-source-dirs:      diylang
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , diy-lang-haskell
  default-language:    Haskell2010

test-suite diy-lang-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Test_1_Parser
                     , Test_2_EvaluatingSimpleExpressions
  build-depends:       base
                     , tasty >= 0.11
                     , tasty-hunit
                     , tasty-fail-fast
                     , diy-lang-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joelchelliah/diy-lang-haskell
