name:                diy-lang-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/joelchelliah/diy-lang-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Joel Chelliah
maintainer:          joelchelliah@gmail.com
copyright:           2017 Joel Chelliah
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , util
                     , solutions
  exposed-modules:     Parser
                     , Evaluator
                     , Types
                     , Environment
                     , Interpreter
                     , ParserUtil
                     , InterpreterUtil
                     , ParserSolution
                     , EvaluatorSolution
                     , EnvironmentSolution
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable diy-lang-haskell-exe
  hs-source-dirs:      diylang
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , diy-lang-haskell
  default-language:    Haskell2010

test-suite test-all
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , test/parts
  main-is:             Test_all.hs
  other-modules:       Test_1_Parser
                     , Test_2_EvaluatingSimpleExpressions
                     , Test_3_EvaluatingComplexExpressions
                     , Test_4_WorkingWithVariables
                     , Test_5_AddingFunctionsToTheMix
                     , Test_6_WorkingWithLists
                     , Test_7_UsingTheLanguage
                     , TestHelper
  build-depends:       base
                     , tasty >= 0.11
                     , tasty-hunit
                     , diy-lang-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite test-1
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , test/parts
  main-is:             Test_only_1.hs
  other-modules:       Test_1_Parser
                     , TestHelper
  build-depends:       base
                     , tasty >= 0.11
                     , tasty-hunit
                     , diy-lang-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite test-2
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , test/parts
  main-is:             Test_only_2.hs
  other-modules:       Test_2_EvaluatingSimpleExpressions
                     , TestHelper
  build-depends:       base
                     , tasty >= 0.11
                     , tasty-hunit
                     , diy-lang-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite test-3
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , test/parts
  main-is:             Test_only_3.hs
  other-modules:       Test_3_EvaluatingComplexExpressions
                     , TestHelper
  build-depends:       base
                     , tasty >= 0.11
                     , tasty-hunit
                     , diy-lang-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite test-4
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , test/parts
  main-is:             Test_only_4.hs
  other-modules:       Test_4_WorkingWithVariables
                     , TestHelper
  build-depends:       base
                     , tasty >= 0.11
                     , tasty-hunit
                     , diy-lang-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite test-5
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , test/parts
  main-is:             Test_only_5.hs
  other-modules:       Test_5_AddingFunctionsToTheMix
                     , TestHelper
  build-depends:       base
                     , tasty >= 0.11
                     , tasty-hunit
                     , diy-lang-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite test-6
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , test/parts
  main-is:             Test_only_6.hs
  other-modules:       Test_6_WorkingWithLists
                     , TestHelper
  build-depends:       base
                     , tasty >= 0.11
                     , tasty-hunit
                     , diy-lang-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite test-7
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , test/parts
  main-is:             Test_only_7.hs
  other-modules:       Test_7_UsingTheLanguage
                     , TestHelper
  build-depends:       base
                     , tasty >= 0.11
                     , tasty-hunit
                     , diy-lang-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joelchelliah/diy-lang-haskell
